# Mouse-glove

./: .gitignore  1 mouse glove.pptx  CMakeCache.txt  CMakeLists.txt  CppTimer_8h_source.html  Filter.h  LSM9DS1.DSN  LSM9DS1.cpp  LSM9DS1__Types_8h_source.html  Makefile  Mouse_8h_source.html  Project2.sln  PullDnReset.sh  PullDownReset.sh  PullUpSet.sh  README.md  Volsce · SlidesCarnival.pptx  annotated.html  classCppTimer.html  classCppTimer.js  classCppTimer__inherit__graph.md5  classFilter.js  classInstrWindow.html  classInstrWindow.js  classInstrWindow__coll__graph.md5  classInstrWindow__inherit__graph.map  classInstrWindow__inherit__graph.md5  classLSM9DS1.html  classLSM9DS1.js  classLSM9DS1PosDataCallback.html  classLSM9DS1PosDataCallback__coll__graph.map  classLSM9DS1PosDataCallback__coll__graph.md5  classLSM9DS1PosDataCallback__inherit__graph.md5  classLSM9DS1__coll__graph.md5  classLSM9DS1__inherit__graph.md5  classLSM9DS1_a0d461614bd058b082c94481dc916c18b_icgraph.map  classLSM9DS1_a0ec4a93a34545af1acc336bae9b360f1_cgraph.map  classLSM9DS1_a0ec4a93a34545af1acc336bae9b360f1_cgraph.md5  classLSM9DS1_a115d304ebcdc8c701f3e5a5d397250aa_cgraph.md5  classLSM9DS1_a143ff5abf4f7ba8e1c42325859106f84_cgraph.map  (+121 more)
GUI/: GUI  GUI.pro  Makefile  README.md  application.pro  instrwindow.cpp  instrwindow.h  main  main.cpp  moc_instrwindow.cpp  moc_window.cpp  window.cpp  window.h
PCB/: README.md
PCB/MainBoard/: MainBord_Layout.brd  README.md
PCB/RaspberryPi expansion board/: ExpansionBoard.brd  README.md
doc/html/: Filter_8h_source.html  LSM9DS1_8h_source.html  LSM9DS1__Registers_8h_source.html  annotated_dup.js  classCppTimer-members.html  classCppTimer__inherit__graph.map  classCppTimer_ac2665403595b6aee5f581d0ebfeb886c_icgraph.map  classCppTimer_ac2665403595b6aee5f581d0ebfeb886c_icgraph.md5  classFilter-members.html  classFilter.html  classInstrWindow-members.html  classInstrWindow.html  classLSM9DS1-members.html  classLSM9DS1PosDataCallback-members.html  classLSM9DS1__coll__graph.map  classLSM9DS1__inherit__graph.map  classLSM9DS1_a0d461614bd058b082c94481dc916c18b_cgraph.map  classLSM9DS1_a0d461614bd058b082c94481dc916c18b_cgraph.md5  (+122 more)
example/: CMakeLists.txt  LSM9DS1_demo  LSM9DS1_demo.cpp  Makefile  README.md  cmake_install.cmake
include/: CppTimer.h  Filter.h  LSM9DS1.h  LSM9DS1_Types.h  Mouse.h
main/: CMakeLists.txt  LSM9DS1_demo.cpp  main.cpp
search/: all_1.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_e.js  classes_5.js  classes_7.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  pages_0.js  variables_4.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js
src/: CMakeLists.txt  Filter.cpp  LSM9DS1.cpp  Mouse.cpp  main.cpp
tst/: CMakeCache.txt  CMakeLists.txt  Click_tst.cpp  Filt_tst.cpp  Makefile  README.md  cmake_install.cmake
(+303 files in other folders)
